Updated typeface in FAQ.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -87,7 +87,7 @@ button.natick-button:hover, a.natick-button:hover, input[type=submit].natick-but
 div > p.natick-text {
 	font-size: 16px;
 	line-height:22px;
-	font-family: "Merriweather Sans", serif;
+	font-family: "Lato", serif;
 }
 
 .caps {
