Updated default color background on signup page

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -313,7 +313,7 @@ ul#footnav li a.active, ul#footnav li a:hover {
 }
 
 #natick-signup {
-	background: #c64977 url('http://natick.s3.amazonaws.com/signup-bg.jpg') no-repeat;
+	background: #47a0a9 url('http://natick.s3.amazonaws.com/signup-bg.jpg') no-repeat;
 	background-size: 100% auto;
 }
 
