New bg splice, copy updates.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -120,28 +120,28 @@ span.bold {
 	width:27%;
 	float: left;
 	background-color: #BAD784;
-	background-image: url(http://i.imgur.com/WCvrHsQ.png);
+	background-image: url(http://natick.s3.amazonaws.com/WCvrHsQ.png);
 }
 
 #col2-landing {
 	width: 73%;
 	float: left;
 	background-color: #EF5A5D;
-	background-image: url(http://i.imgur.com/WCvrHsQ.png);
+	background-image: url(http://natick.s3.amazonaws.com/WCvrHsQ.png);
 }
 
 #col1-signup {
 	width:27%;
 	float: left;
 	background-color: #FEE7AA;
-	background-image: url(http://i.imgur.com/WCvrHsQ.png);
+	background-image: url(http://natick.s3.amazonaws.com/WCvrHsQ.png);
 }
 
 #col2-signup {
 	width: 73%;
 	float: left;
 	background-color: #19A1B0;
-	background-image: url(http://i.imgur.com/WCvrHsQ.png);
+	background-image: url(http://natick.s3.amazonaws.com/WCvrHsQ.png);
 }
 
 #natick-couple {
