--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -7,7 +7,6 @@ Author:		Cameron Morgan
 
 body {
   margin:0px; padding:0px;
-  background: none repeat scroll 0 0 #f6f6f6;
   font-family:Arial, Helvetica, sans-serif;
   color: white;
   font-size:13px;
@@ -124,6 +123,7 @@ span.bold {
 
 #col2-landing {
 	width: 73%;
+	height: 811px;
 	float: left;
 	background-color: #EF5A5D;
 	background-image: url(http://natick.s3.amazonaws.com/WCvrHsQ.png);
