--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -15,7 +15,7 @@ body {
 
 h1 {
 	font-size: 16px;
-	color: #ba3226;
+	color: #fff;
 	line-height: 26px;
 }
 
@@ -262,6 +262,10 @@ div#main > p {
 
 #box {
 	text-align: center;
+}
+
+div.col2-landing > h1{
+	font-family: 'Lato', sans-serif;
 }
 
 /* Secondary Styles -------------------------------------------- */
